--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/dallasread/sequelize-permissions#readme",
   "devDependencies": {
     "factory-girl-sequelize": "^1.0.0",
+    "sequelize-hierarchy": "^0.5.8",
     "should": "^8.0.2",
     "sqlite3": "^3.1.1"
   },
