--- a/.jshintrc
+++ b/.jshintrc
@@ -14,7 +14,7 @@
   },
   "browser": false,
   "boss": true,
-  "curly": false,
+  "curly": true,
   "debug": false,
   "devel": true,
   "eqeqeq": true,
