--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sequelize-permissions",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "`sequelize-permissions` adds permissions to your models. If your models use `sequalize-hierarchy`, you can set how their permissions inherit.",
   "main": "index.js",
   "scripts": {
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/dallasread/sequelize-permissions#readme",
   "devDependencies": {
-    "factory-girl-sequelize": "^1.0.0",
+    "sequelize": "^3.19.2",
     "sequelize-hierarchy": "^0.5.8",
     "should": "^8.0.2",
     "sqlite3": "^3.1.1"
   },
   "dependencies": {
     "async": "^1.5.0",
-    "sequelize": "^3.15.0"
+    "generate-js": "^2.1.3"
   }
 }
